# justmaple

./: .editorconfig  .gitignore  CLAUDE.md
.claude/: settings.local.json
.claude/commands/: commit_push.md  compact_prompt.md  context_prep.md  make_plan.md
JustMaple/Assets/Input/: PlatformerInputActions.cs  PlatformerInputActions.inputactions
JustMaple/Assets/Prefabs/: CirclePrefab.prefab  FoodPrefab.prefab  PlayerPrefab.prefab
JustMaple/Assets/Scenes/: SampleScene.unity  SystemsRoot.unity
JustMaple/Assets/Scripts/: CameraController.cs  CircleController.cs  EntityController.cs  Extensions.cs  FoodController.cs  GameManager.cs  MovementControllerEntity.cs  PlayerController.cs  PrefabManager.cs
JustMaple/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
JustMaple/Assets/autogen/: SpacetimeDBClient.g.cs
JustMaple/Assets/autogen/Reducers/: Connect.g.cs  (+6 more)
JustMaple/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
server-rust/: .editorconfig  Cargo.toml  README.md  deploy.bat  generate.bat  publish.bat
server-rust/src/: lib.rs
server-rust/src/config/: game_constants.rs  mod.rs
server-rust/src/physics/: world.rs
server-rust/src/reducers/: connection_reducers.rs  game_reducers.rs  mod.rs  physics_reducers.rs  player_reducers.rs
server-rust/src/tables/: circle.rs  config.rs  entity.rs  food.rs  mod.rs  movement_controller.rs  physics_body.rs  player.rs  player_input.rs  timers.rs
server-rust/src/types/: db_vector2.rs  mod.rs
server-rust/src/utils/: collision_detection.rs  game_math.rs  mod.rs  random_extensions.rs
(+27 files in other folders)
